--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,6 +34,12 @@
 @import "./layout/mediasquery/media-boxsets768";
 @import "./layout/mediasquery/media-artbooks768";
 @import "./layout/mediasquery/media375";
+@import "./layout/mediasquery/media-mangas375";
+@import "./layout/mediasquery/media-novelas375";
+@import "./layout/mediasquery/media-boxsets375px";
+@import "./layout/mediasquery/media-artbooks375";
+@import "./layout/mediasquery/media-ofertas375px";
+
 
 
 
